force-app/main/default/src/objects/PJN_Contact_Attempt__c/PJN_Contact_Attempt__c.object-meta.xml
<CustomObject>
    <description>Captures attempts to contact a patient. Rolls up to an activity and ultimately to a Care Plan.</description>
    <label>Contact Attempt</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Contact Attempt #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>