force-app/main/default/src/objects/PJN_Contact_Attempt__c/fields/PJN_Attempt_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PJN_Attempt_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date and time the attempt was made.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Attempt Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>