force-app/main/default/src/objects/PJN_Contact_Attempt__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;PJN_Case_Activity__r.ParentId,PJN_Case_Activity__r.Parent.PJN_Account_Name__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Plan</label>
    <type>Text</type>
</CustomField>