force-app/main/default/src/objects/PJN_Contact_Attempt__c/fields/PJN_Case_Activity__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Activity__c</fullName>
    <description>Master-detail lookup to the Case activity to which this Contact Attempt applies.</description>
    <label>Case Activity</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contact Attempts</relationshipLabel>
    <relationshipName>Contact_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>