force-app/main/default/src/objects/PJN_Contact_Attempt__c/validationRules/PJN_Attempt_cannot_be_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Attempt_cannot_be_in_the_future</fullName>
    <active>true</active>
    <description>Ensures that the contact attempt is not in the future</description>
    <errorConditionFormula>PJN_Attempt_Date_Time__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>PJN_Attempt_Date_Time__c</errorDisplayField>
    <errorMessage>Please choose a date/time that is in the past</errorMessage>
</ValidationRule>